add rpc endpoints

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
+HTTPS_RPC_ENDPOINT="https://sepolia.drpc.org"
+WSS_RPC_ENDPOINT="wss://sepolia.drpc.org"
+
 LOTTERY_CONTRACT_ADDRESS=""
-TEST_LOTTERY_CONTRACT_ADDRESS=""
 
 OWNER_ADDRESS=""
 OWNER_PRIVATE_KEY=""
